--- a/docs.html
+++ b/docs.html
@@ -274,6 +274,17 @@ pre, pre *, code, code * {
                     </div>
 
                     <div class="mb-6">
+                        <h3 class="text-sm font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-3">CLI Tools</h3>
+                        <div class="space-y-1">
+                            <button @click="activeComponent = 'nd-cli'"
+                                    :class="activeComponent === 'nd-cli' ? 'text-primary-600 dark:text-primary-400 bg-primary-50 dark:bg-primary-900/20' : 'text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400'"
+                                    class="w-full text-left px-3 py-2 rounded-lg text-sm transition-colors">
+                                ⚡ Noundry CLI (nd)
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="mb-6">
                         <h3 class="text-sm font-semibold text-gray-500 dark:text-gray-400 uppercase tracking-wider mb-3">Development Tools</h3>
                         <div class="space-y-1">
                             <button @click="activeComponent = 'dotenvx'"
@@ -343,13 +354,15 @@ pre, pre *, code, code * {
                             <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-3">Getting Started with Templates</h3>
                             <p class="text-gray-600 dark:text-gray-300 mb-4">Start with our project templates for rapid development.</p>
                             <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300 space-y-2">
-                                <div class="text-gray-500"># Create a new web application</div>
-                                <div class="text-accent-500">$ dotnet new noundry-app -n MyApp</div>
+                                <div class="text-gray-500"># Install Noundry CLI</div>
+                                <div class="text-accent-500">$ dotnet tool install --global Noundry.Cli</div>
+                                <div class="text-gray-500 mt-3"># Create a new web application with nd</div>
+                                <div class="text-accent-500">$ nd dn new noundry-app -- -n MyApp</div>
                                 <div class="text-gray-500 mt-3"># Create a new API</div>
-                                <div class="text-accent-500">$ dotnet new noundry-api -n MyApi</div>
+                                <div class="text-accent-500">$ nd dn new noundry-api -- -n MyApi</div>
                                 <div class="text-gray-500 mt-3"># Add Noundry libraries</div>
-                                <div class="text-accent-500">$ dotnet add package Noundry.UI</div>
-                                <div class="text-accent-500">$ dotnet add package Noundry.Tuxedo</div>
+                                <div class="text-accent-500">$ nd dn add package Noundry.UI</div>
+                                <div class="text-accent-500">$ nd dn add package Noundry.Tuxedo</div>
                             </div>
                         </div>
                         
@@ -377,6 +390,148 @@ pre, pre *, code, code * {
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+
+                <!-- Noundry CLI (nd) -->
+                <div x-show="activeComponent === 'nd-cli'" class="max-w-4xl">
+                    <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">Noundry CLI (nd)</h1>
+                    <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
+                        The unified command-line interface for dotnet.exe and all Noundry framework tools. Fast, beautiful, and efficient.
+                    </p>
+
+                    <div class="bg-gradient-to-r from-blue-50 to-purple-50 dark:from-blue-900/30 dark:to-purple-900/30 rounded-xl p-6 mb-8 border border-blue-200 dark:border-blue-700">
+                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-3">✨ Drop-In Tool for Your Workflow</h3>
+                        <p class="text-gray-700 dark:text-gray-300 mb-4">
+                            <strong>nd CLI</strong> is a drop-in tool that allows you to interact with dotnet native CLI AND fully engage with existing Noundry tooling from one unified interface. No need to remember multiple command names or install tools separately.
+                        </p>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Installation</h2>
+                        <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-4 font-mono text-sm text-gray-300 mb-4">
+                            <div class="text-gray-500"># Install as .NET global tool</div>
+                            <div class="text-accent-500">$ dotnet tool install --global Noundry.Cli</div>
+                            <div class="mt-3 text-gray-500"># Verify installation</div>
+                            <div class="text-accent-500">$ nd --version</div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Key Features</h2>
+                        <div class="grid md:grid-cols-2 gap-4 mb-6">
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">🚀</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Single CLI for Everything</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">One tool to access dotnet and all Noundry utilities</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">⚡</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Fast & Efficient</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Built with .NET 9.0 for optimal performance</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">🎨</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Beautiful UI</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Powered by Spectre.Console with rich formatting</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <div class="text-2xl mb-2">📦</div>
+                                <h3 class="font-semibold text-gray-900 dark:text-white mb-2">Auto Tool Installation</h3>
+                                <p class="text-sm text-gray-600 dark:text-gray-300">Installs missing tools on-demand with permission</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Core Commands</h2>
+
+                        <div class="space-y-6">
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
+                                <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3"><code class="bg-primary-100 dark:bg-primary-900 text-primary-600 dark:text-primary-400 px-2 py-1 rounded">nd init</code></h3>
+                                <p class="text-gray-600 dark:text-gray-300 mb-3">Initialize a new Noundry project with interactive wizard.</p>
+                                <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300">
+                                    <div class="text-accent-500">$ nd init --framework net90</div>
+                                </div>
+                            </div>
+
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
+                                <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3"><code class="bg-primary-100 dark:bg-primary-900 text-primary-600 dark:text-primary-400 px-2 py-1 rounded">nd dn</code></h3>
+                                <p class="text-gray-600 dark:text-gray-300 mb-3">Wrapper for dotnet.exe - run any dotnet command through nd.</p>
+                                <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300 space-y-1">
+                                    <div class="text-gray-500"># Build project</div>
+                                    <div class="text-accent-500">$ nd dn build</div>
+                                    <div class="mt-2 text-gray-500"># Create new project (use -- before options)</div>
+                                    <div class="text-accent-500">$ nd dn new webapi -- -n MyApi</div>
+                                    <div class="mt-2 text-gray-500"># Run application</div>
+                                    <div class="text-accent-500">$ nd dn run</div>
+                                </div>
+                                <div class="mt-3 bg-blue-50 dark:bg-blue-900/20 rounded p-3 text-sm">
+                                    <p class="text-gray-700 dark:text-gray-300"><strong>Tip:</strong> Use <code class="bg-white dark:bg-gray-800 px-1 rounded">--</code> separator before options like <code>-n</code>, <code>-c</code>, <code>-o</code></p>
+                                </div>
+                            </div>
+
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-6">
+                                <h3 class="text-lg font-semibold text-gray-900 dark:text-white mb-3"><code class="bg-primary-100 dark:bg-primary-900 text-primary-600 dark:text-primary-400 px-2 py-1 rounded">nd install</code></h3>
+                                <p class="text-gray-600 dark:text-gray-300 mb-3">Install all Noundry CLI tools globally.</p>
+                                <div class="bg-gray-900 dark:bg-gray-700 rounded-lg p-3 font-mono text-sm text-gray-300">
+                                    <div class="text-accent-500">$ nd install</div>
+                                </div>
+                                <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Installs: ndng, slurp, authnz, lgby, njobs, ndotenvx, bowtie, cufflink</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-8">
+                        <h2 class="text-2xl font-semibold text-gray-900 dark:text-white mb-4">Tool Wrappers</h2>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">Access all Noundry tools through the nd CLI:</p>
+                        <div class="grid md:grid-cols-2 gap-4">
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd ng</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Engine CLI (deployment)</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd slurp</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Data ingestion</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd authnz</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Authentication/Authorization</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd lgby</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Logably (logging)</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd jobs</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Background jobs</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd envx</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Environment variables</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd bowtie</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Tuxedo Bowtie</p>
+                            </div>
+                            <div class="bg-gray-50 dark:bg-gray-800 rounded-lg p-4">
+                                <code class="text-primary-600 dark:text-primary-400">nd cufflink</code>
+                                <p class="text-sm text-gray-600 dark:text-gray-300 mt-1">Tuxedo Cufflink</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="bg-accent-50 dark:bg-accent-900/20 rounded-xl p-6">
+                        <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-3">📚 Full Documentation</h3>
+                        <p class="text-gray-600 dark:text-gray-300 mb-4">
+                            For complete documentation, examples, and troubleshooting, visit the dedicated nd CLI page.
+                        </p>
+                        <a href="nd-cli.html" class="inline-flex items-center bg-accent-600 hover:bg-accent-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                            View Full nd CLI Documentation
+                            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
                     </div>
                 </div>
 
