updates to brand disclaimer

--- a/index.html
+++ b/index.html
@@ -2573,7 +2573,7 @@
             <div class="border-t border-gray-800 mt-12 pt-8">
                 <div class="mb-6 text-center">
                     <p class="text-gray-500 text-xs max-w-4xl mx-auto">
-                        Noundry is not affiliated with, endorsed by, or sponsored by Microsoft Corporation. .NET, C#, and related trademarks are property of Microsoft Corporation.
+                        Noundry is not affiliated with, endorsed by, or sponsored by Microsoft Corporation, Amazon, Inc., or Google LLC. .net, dotnet, Windows, C#, Azure and related trademarks are property of Microsoft Corporation. Amazon and Amazon AWS, CloudWatch, Elastic Beanstalk, etc. are trademarks and property of Amazon.com Inc. Google, Google Cloud are registered trademarks of Google LLC.
                         Noundry is an independent framework that provides modern, opinionated tooling and components for C# developers.
                     </p>
                 </div>
