--- a/index.html
+++ b/index.html
@@ -2122,7 +2122,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
                             </svg>
                             <div>
-                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">Hono.js Framework</h4>
+                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">Hono Framework</h4>
                                 <p class="text-gray-600 dark:text-gray-300">Ultrafast web framework with intuitive API design and excellent TypeScript support</p>
                             </div>
                         </div>
@@ -2143,7 +2143,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
                             </svg>
                         </a>
-                        <a href="https://github.com/noundryfx/noundry.ts" target="_blank" class="inline-flex items-center bg-gray-800 hover:bg-gray-900 dark:bg-gray-700 dark:hover:bg-gray-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                        <a href="https://github.com/noundry/ndts" target="_blank" class="inline-flex items-center bg-gray-800 hover:bg-gray-900 dark:bg-gray-700 dark:hover:bg-gray-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
                             <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
                                 <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                             </svg>
@@ -2202,7 +2202,7 @@
                             </svg>
                         </div>
                         <h4 class="font-bold text-gray-900 dark:text-white mb-2">Enterprise API</h4>
-                        <p class="text-sm text-gray-600 dark:text-gray-300">Noundry.com (C#/.NET) for robust, scalable backend services</p>
+                        <p class="text-sm text-gray-600 dark:text-gray-300">Noundry.com (C#) for robust, scalable backend services</p>
                     </div>
                     <div class="text-center p-6 bg-gray-50 dark:bg-gray-900/50 rounded-lg">
                         <div class="inline-flex items-center justify-center w-16 h-16 bg-green-100 dark:bg-green-900/30 rounded-full mb-4">
