--- a/index.html
+++ b/index.html
@@ -341,6 +341,60 @@
         </div>
     </section>
 
+    <!-- Platform Status Banner -->
+    <section class="py-12 bg-gradient-to-r from-green-500 to-emerald-600 dark:from-green-600 dark:to-emerald-700">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center text-white">
+                <div class="inline-flex items-center px-4 py-2 bg-white/20 rounded-full mb-4">
+                    <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20">
+                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"/>
+                    </svg>
+                    <span class="text-sm font-semibold">NOVEMBER 2025 UPDATES</span>
+                </div>
+                <h2 class="text-3xl lg:text-4xl font-bold mb-4">
+                    Major Platform Improvements Released
+                </h2>
+                <p class="text-xl mb-6 max-w-3xl mx-auto opacity-95">
+                    Platform score improved from 59% to <strong>68% ready</strong> with 4 core components achieving production-ready status
+                </p>
+                <div class="grid md:grid-cols-4 gap-6 mt-8">
+                    <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
+                        <div class="text-3xl font-bold mb-2">10/10</div>
+                        <div class="text-sm font-semibold mb-1">Noundry.Authnz</div>
+                        <div class="text-xs opacity-80">OAuth 2.0 Client Library</div>
+                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">⬆️ +5.25 pts</div>
+                    </div>
+                    <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
+                        <div class="text-3xl font-bold mb-2">9.25/10</div>
+                        <div class="text-sm font-semibold mb-1">Cloud (NDC)</div>
+                        <div class="text-xs opacity-80">Multi-Cloud Deploy CLI</div>
+                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">⬆️ +4.0 pts</div>
+                    </div>
+                    <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
+                        <div class="text-3xl font-bold mb-2">9/10</div>
+                        <div class="text-sm font-semibold mb-1">AuthnzNet</div>
+                        <div class="text-xs opacity-80">OAuth 2.0 Dev Server</div>
+                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">⬆️ +2.5 pts</div>
+                    </div>
+                    <div class="bg-white/10 backdrop-blur-sm rounded-lg p-6">
+                        <div class="text-3xl font-bold mb-2">8.5/10</div>
+                        <div class="text-sm font-semibold mb-1">Noundry.Tuxedo</div>
+                        <div class="text-xs opacity-80">High-Performance ORM</div>
+                        <div class="text-xs mt-2 bg-white/20 rounded px-2 py-1">⬆️ +5.5 pts</div>
+                    </div>
+                </div>
+                <div class="mt-8">
+                    <a href="changelog.html" class="inline-flex items-center bg-white text-green-600 hover:bg-gray-100 px-6 py-3 rounded-lg font-semibold transition-colors">
+                        View Full Changelog
+                        <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Noundry CLI Highlight Section -->
     <section class="py-20 bg-gradient-to-br from-blue-50 via-purple-50 to-pink-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
