--- a/bowtie.html
+++ b/bowtie.html
@@ -347,6 +347,44 @@ pre, pre *, code, code * {
         </div>
     </section>
 
+    <!-- Related Tools Section -->
+    <section class="py-16 bg-gradient-to-r from-teal-50 to-cyan-50 dark:from-gray-800 dark:to-teal-900/20 border-y border-teal-100 dark:border-teal-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex flex-col md:flex-row items-center justify-between gap-8">
+                <div class="flex-1">
+                    <div class="inline-flex items-center px-3 py-1 bg-teal-600 text-white rounded-full text-xs font-semibold mb-3">
+                        🔗 COMPANION TOOL
+                    </div>
+                    <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-3">
+                        Tuxedo.Cufflink - Test Data Generator
+                    </h3>
+                    <p class="text-gray-600 dark:text-gray-300 mb-4">
+                        After Bowtie creates your schema, use <strong>Cufflink</strong> to generate realistic test data. It automatically honors FK/PK relationships and uses Bogus for intelligent fake data generation.
+                    </p>
+                    <div class="flex flex-wrap gap-3">
+                        <span class="inline-flex items-center px-3 py-1 bg-white dark:bg-gray-700 rounded-lg text-sm text-gray-700 dark:text-gray-300">
+                            ✨ FK/PK Relationship Aware
+                        </span>
+                        <span class="inline-flex items-center px-3 py-1 bg-white dark:bg-gray-700 rounded-lg text-sm text-gray-700 dark:text-gray-300">
+                            🎲 Realistic Fake Data
+                        </span>
+                        <span class="inline-flex items-center px-3 py-1 bg-white dark:bg-gray-700 rounded-lg text-sm text-gray-700 dark:text-gray-300">
+                            ⚡ High-Performance Bulk Insert
+                        </span>
+                    </div>
+                </div>
+                <div class="flex-shrink-0">
+                    <a href="cufflink.html" class="inline-flex items-center px-6 py-3 bg-teal-600 hover:bg-teal-700 text-white rounded-lg font-semibold transition-colors">
+                        Learn About Cufflink
+                        <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Model Attributes Section -->
     <section id="models" class="py-20 bg-white dark:bg-gray-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
