--- a/index.html
+++ b/index.html
@@ -341,6 +341,31 @@
         </div>
     </section>
 
+    <!-- What's New in Tuxedo Banner -->
+    <section class="py-6 bg-gradient-to-r from-blue-600 to-indigo-700 dark:from-blue-700 dark:to-indigo-800 border-y border-blue-700 dark:border-indigo-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex items-center justify-between flex-wrap gap-4">
+                <div class="flex items-center gap-3">
+                    <span class="inline-flex items-center px-3 py-1 bg-white/20 rounded-full text-white text-xs font-semibold">
+                        ✨ NEW
+                    </span>
+                    <span class="text-white font-semibold">
+                        Tuxedo 0.4.0 Released:
+                    </span>
+                    <span class="text-white/90 text-sm">
+                        Exception Translation • Audit Logging • Query Caching • Bulk Operations
+                    </span>
+                </div>
+                <a href="tuxedo.html" class="inline-flex items-center px-4 py-2 bg-white hover:bg-gray-100 text-blue-700 rounded-lg text-sm font-semibold transition-colors">
+                    Learn More
+                    <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Platform Status Banner -->
     <section class="py-12 bg-gradient-to-r from-green-500 to-emerald-600 dark:from-green-600 dark:to-emerald-700">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
