--- a/index.html
+++ b/index.html
@@ -341,6 +341,31 @@
         </div>
     </section>
 
+    <!-- AI Gateway - NEW Product Banner -->
+    <section class="py-8 bg-gradient-to-r from-purple-600 via-pink-600 to-purple-700 dark:from-purple-700 dark:via-pink-700 dark:to-purple-800 border-y border-purple-700 dark:border-purple-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex items-center justify-between flex-wrap gap-4">
+                <div class="flex items-center gap-3">
+                    <span class="inline-flex items-center px-3 py-1 bg-white/30 rounded-full text-white text-xs font-bold uppercase tracking-wide animate-pulse">
+                        🚀 NEW PRODUCT
+                    </span>
+                    <span class="text-white font-bold text-lg">
+                        AI Gateway for .NET:
+                    </span>
+                    <span class="text-white/95 text-sm">
+                        Unified API for OpenAI, Anthropic, Google • Multi-Provider Fallback • Streaming • PromptBuilder
+                    </span>
+                </div>
+                <a href="ai-gateway.html" class="inline-flex items-center px-5 py-2.5 bg-white hover:bg-gray-100 text-purple-700 rounded-lg text-sm font-bold transition-all hover:scale-105 shadow-lg">
+                    Explore AI Gateway
+                    <svg class="w-4 h-4 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"></path>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- What's New in Tuxedo Banner -->
     <section class="py-6 bg-gradient-to-r from-blue-600 to-indigo-700 dark:from-blue-700 dark:to-indigo-800 border-y border-blue-700 dark:border-indigo-900">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
