--- a/index.html
+++ b/index.html
@@ -350,10 +350,10 @@
                         🚀 NEW PRODUCT
                     </span>
                     <span class="text-white font-bold text-lg">
-                        AI Gateway for .NET:
+                        AI Gateway for C#:
                     </span>
                     <span class="text-white/95 text-sm">
-                        Unified API for OpenAI, Anthropic, Google • Multi-Provider Fallback • Streaming • PromptBuilder
+                        Unified API for OpenAI, Anthropic, Google • Multi-Provider Fallback • Streaming • PromptBuilder • ChainPromptBuilder
                     </span>
                 </div>
                 <a href="ai-gateway.html" class="inline-flex items-center px-5 py-2.5 bg-white hover:bg-gray-100 text-purple-700 rounded-lg text-sm font-bold transition-all hover:scale-105 shadow-lg">
